# postgresql-fastapi-practice

./: README.md  alembic.ini  db.py  docker-compose.yml  main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  fetch.js
frontend/src/components/: LoginPage.jsx  SignUpPage.jsx  UserPage.jsx
frontend/src/config/: theme.js
myAlembic/: env.py  my_user.py
myAlembic/versions/: 0682536768d4_add_user_birthday.py  4291a15d1687_change_column_data_type.py  6e80f15572b5_last_login_to_datetime.py  78694610709b_remove_nickname.py  96038bc88deb_add_password.py  a5184c845a33_create_user_table.py  af6eb782a945_add_create_time_and_last_login.py
